<?xml version="1.0"?>
<package>
  <name>robbie_bringup</name>
  <version>0.0.0</version>
  <description>robbie_bringup package</description>

  <maintainer email="peter.heim1066@gmail.com">Peter Heim</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/robbie_bringup</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robbie_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>arbotix_python</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>freenect_launch</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>ps3joy</run_depend>
  <run_depend>rgbd_launch</run_depend>
  <run_depend>robbie_ai</run_depend>
  <run_depend>robbie_description</run_depend>
  <run_depend>robbie_moveit</run_depend>
  <run_depend>robbie_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>xacro</run_depend>

  
</package>
