<?xml version="1.0"?>
<package>
  <name>robbie_control</name>
  <version>0.0.0</version>
  <description>The robbie_control package</description>

  <maintainer email="peter.heim1066@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="peter.heim1066@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
