<?xml version="1.0"?>
<package>
  <name>robbie_control</name>
  <version>0.0.0</version>
  <description>The robbie_control package</description>

  <maintainer email="peter.heim1066@gmail.com">Peter Heim</maintainer>

  <license>BSD</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="peter.heim1066@gmail.com">Peter Heim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>


  

</package>
