<?xml version="1.0"?>
<package>
  <name>robbie_gazebo</name>
  <version>0.0.0</version>
  <description>The robbie_gazebo package</description>

  <maintainer email="peter.heim1066@gmail.com">Peter Heim</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/robbie_gazebo</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robbie_control</run_depend>
  <run_depend>robbie_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xacro</run_depend>

  
</package>
