<?xml version="1.0"?>
<package>
  <name>robbie_test</name>
  <version>0.0.0</version>
  <description>The robbie_test package</description>

  <maintainer email="peter.heim1066@gmail.com">Peter Heim</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/robbie_test</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rbx2_msgs</build_depend>
  <build_depend>rbx2_tasks</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rbx2_msgs</run_depend>
  <run_depend>rbx2_tasks</run_depend>
  <run_depend>robbie_bringup</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  
</package>
