<?xml version="1.0"?>
<package>
  <name>robbie_vision</name>
  <version>0.1.0</version>
  <description>The robbie_vision package</description>

  
  <maintainer email="peter@todo.todo">peter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>

<export>

  </export>



</package>
